@@ -1,5 +1,6 @@
 package com.cinyema.app.servicios;
 
+import java.io.UnsupportedEncodingException;
 import java.time.LocalDate;
 import java.time.Period;
 import java.time.format.DateTimeFormatter;
@@ -7,8 +8,15 @@ import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
 import java.util.Optional;
+
+import javax.mail.MessagingException;
+import javax.mail.internet.MimeMessage;
 import javax.servlet.http.HttpSession;
+
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.mail.javamail.JavaMailSender;
+import org.springframework.mail.javamail.MimeMessageHelper;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
@@ -25,28 +33,69 @@ import com.cinyema.app.entidades.Usuario;
 import com.cinyema.app.enumeraciones.Rol;
 import com.cinyema.app.repositorios.UsuarioRepositorio;
 
+import net.bytebuddy.utility.RandomString;
+
 @Service
-public class UsuarioServicio implements UserDetailsService {
+public class UsuarioServicio implements UserDetailsService, ServicioBase<Usuario> {
 
 	@Autowired
 	private UsuarioRepositorio usuarioRepositorio;
+	
+	@Autowired
+	private JavaMailSender mailSender;
 
+	@Override
 	@Transactional(propagation = Propagation.REQUIRED, rollbackFor = { Exception.class })
 	public Usuario registrar(Usuario usuario) throws Exception {
 		validar(usuario);
 //		validarMayoriaEdad(usuario);
-		usuario.setAlta(true);
+		usuario.setAlta(false);
 		usuario.setRol(Rol.USUARIO);
 		BCryptPasswordEncoder encriptada = new BCryptPasswordEncoder();
 		usuario.setContrasenia(encriptada.encode(usuario.getContrasenia()));
+		
+		String codigoRandom = RandomString.make(64);
+		usuario.setCodigoVerificacion(codigoRandom);
+		
 		return usuarioRepositorio.save(usuario);
 	}
 	
+	public void enviarMailVerificacion(Usuario usuario, String siteURL) throws UnsupportedEncodingException, MessagingException{
+		String tema = "[VERIFICAR CUENTA DE CINYEMA]";
+		String remitente = "Equipo de Cinyema";
+		String contenido = "<p>Querido "+usuario.getNombre()+"</p>";
+		contenido += "<p>Por favor, haga click en el siguiente enlace para verificar su registro a Cinyema:</p>";
+		String verificarURL = siteURL + "/verify?code=" + usuario.getCodigoVerificacion();
+		contenido += "<h3><a href=\"" + verificarURL + "\">VERIFICAR CUENTA ✔</a></h3>";
+		contenido += "<p>Gracias! <br>Equipo de Cinyema</p>";
+		MimeMessage message = mailSender.createMimeMessage();
+		MimeMessageHelper helper = new MimeMessageHelper(message);
+		
+		helper.setFrom("cinyema@gmail.com", remitente);
+		helper.setTo(usuario.getMail());
+		helper.setSubject(tema);
+		helper.setText(contenido, true);
+		
+		mailSender.send(message);
+	}
+	
+	public boolean validarCodigo(String codigoVerificacion) {
+		Usuario usuario = usuarioRepositorio.buscarPorCodigoVerificacion(codigoVerificacion);
+		if (usuario.getAlta()) {
+			return false;
+		}else {
+			usuario.setAlta(true);
+			usuarioRepositorio.save(usuario);
+			return true;
+		}
+	}
+
 	@Transactional
 	public Usuario registrarVacio() {
 		return new Usuario();
 	}
 
+	@Override
 	@Transactional(propagation = Propagation.REQUIRED, rollbackFor = { Exception.class })
 	public Usuario editar(Usuario usuario) throws Exception {
 		validar(usuario);
@@ -58,15 +107,17 @@ public class UsuarioServicio implements UserDetailsService {
 		return usuarioRepositorio.save(usuario);
 	}
 
+	@Override
 	@Transactional(readOnly = true)
 	public List<Usuario> listar() {
 		return usuarioRepositorio.findAll();
 	}
 
+	@Override
 	@Transactional(propagation = Propagation.REQUIRED, rollbackFor = { Exception.class })
-	public Usuario obtenerUsuarioPorId(Long id) throws Exception {
+	public Usuario obtenerPorId(Long id) throws Exception {
 		Optional<Usuario> result = usuarioRepositorio.findById(id);
-		if (result.isEmpty()) {
+		if (!result.isPresent()) {
 			throw new Exception("No se encontró");
 		} else {
 			Usuario usuario = result.get();
@@ -98,6 +149,7 @@ public class UsuarioServicio implements UserDetailsService {
 		return usuario;
 	}
 
+	@Override
 	@Transactional(propagation = Propagation.REQUIRED, rollbackFor = { Exception.class })
 	public void eliminar(Long idUsuario) {
 		usuarioRepositorio.deleteById(idUsuario);
@@ -116,10 +168,40 @@ public class UsuarioServicio implements UserDetailsService {
 		return 100 - totalAlta();
 	}
 
+	@Transactional(readOnly = true)
+	public List<Usuario> usuariosActivos() {
+
+		return usuarioRepositorio.buscarUsuarioActivos();
+	}
+
+	@Transactional(readOnly = true)
+	public List<Usuario> usuariosInactivos() {
+
+		return usuarioRepositorio.buscarUsuarioInactivos();
+	}
+
+	@Transactional(readOnly = true)
+	public Integer cantidadDeUsuario() {
+
+		return usuarioRepositorio.cantidadUsuario();
+	}
+
+	@Transactional(readOnly = true)
+	public Double porcentajeUsuariosActivos() {
+
+		return (double) (usuarioRepositorio.cantidadUsuario() / usuarioRepositorio.buscarUsuarioActivos().size());
+	}
+
+	@Transactional(readOnly = true)
+	public Double porcentajeUsuariosInactivos() {
+
+		return (double) (usuarioRepositorio.cantidadUsuario() / usuarioRepositorio.buscarUsuarioInactivos().size());
+	}
+
 	public void validar(Usuario usuario) throws Exception {
 		Date hoy = new Date();
 
-		if (usuario.getNombre() == null || usuario.getNombre().isBlank()) {
+		if (usuario.getNombre() == null || StringUtils.isBlank(usuario.getNombre())) {
 			throw new Exception("Nombre de usuario inválido");
 		}
 
@@ -128,7 +210,7 @@ public class UsuarioServicio implements UserDetailsService {
 			throw new Error("E-mail de usuario inválido");
 		}
 
-		if (usuario.getNombreDeUsuario() == null || usuario.getNombreDeUsuario().isBlank()) {
+		if (usuario.getNombreDeUsuario() == null || StringUtils.isBlank(usuario.getNombreDeUsuario())) {
 			throw new Exception("Nombre de usuario inválido");
 		}
 
@@ -140,6 +222,7 @@ public class UsuarioServicio implements UserDetailsService {
 //		if (usuario.getFechaNacimiento() == null || usuario.getFechaNacimiento().after(hoy)) {
 //			throw new Exception("Fecha de nacimiento inválida");
 //		}
+		
 
 	}
 
@@ -148,7 +231,7 @@ public class UsuarioServicio implements UserDetailsService {
 	public UserDetails loadUserByUsername(String nombreDeUsuario) throws UsernameNotFoundException {
 		Usuario usuario = usuarioRepositorio.buscarPorNombreDeUsuario(nombreDeUsuario);
 		User user = null;
-		if (usuario != null) {
+		if (usuario != null && usuario.getAlta() == true) {
 			List<GrantedAuthority> permisos = new ArrayList<>();
 			GrantedAuthority permiso = new SimpleGrantedAuthority("ROLE_" + usuario.getRol().toString());
 			permisos.add(permiso);
@@ -159,7 +242,7 @@ public class UsuarioServicio implements UserDetailsService {
 			session.setAttribute("usuariosession", usuario);
 			user = new User(nombreDeUsuario, usuario.getContrasenia(), permisos);
 		} else {
-			throw new UsernameNotFoundException("El ususario no se encontro");
+			throw new UsernameNotFoundException("El usuario no se encontró");
 		}
 		return user;
 	}
